log
Tue, May 13, 2025 11:26:15 AM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:66:7: error: implicit declaration of function 'addNode' [-Werror=implicit-function-declaration]
       addNode(list, new_node);
       ^~~~~~~
sudoku.c: In function 'find_first_empty':
sudoku.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3f0e54c
